2007-08-20  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py (fontstyle_to_fontdescription): Fix font size.

2007-08-19  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py (breakup): fix index check

2007-08-19  Robert Cawley  <rjc@cawley.id.au>
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DetAncestralReport.py:
	* src/ReportBase/_ReportUtils.py: 0001121: Output relationshipo type 
	correctly in Detailed descendant and ancestor reports

2007-08-19  Brian Matherly <brian@gramps-project.org>
            Jérôme <romjerome@yahoo.fr>
	* src/data/Makefile.am: Include template directory (#0001166)
	* src/data/templates/blue_edge.tpkg: smaller version from jerome (#0001166)
	* src/data/templates/sepia.tpkg: smaller version from jerome (#0001166)
	* src/data/templates/marble.tpkg: smaller version from jerome (#0001166)
	* src/data/templates/pink_marble.tpkg: smaller version from jerome(#0001166)
	* src/data/templates/sky_border.tpkg: smaller version from jerome (#0001166)

2007-08-19  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py: Fix deprecation warnings.

2007-08-18  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: fix event names, url type
	* src/GrampsDbUtils/_WriteGedcom.py: remove non-standard format types
	* src/GrampsDbUtils/gedcomexport.glade: remove non-standard format types

2007-08-18  Brian Matherly <brian@gramps-project.org>
	* src/plugins/KinshipReport.py: fix typo nefew -> nephew
	* src/Relationship.py: fix typo nefew -> nephew

2007-08-18  Benny Malengier <bm@cage.ugent.be>
	* src/ExportAssistant.py: begin of new export manager based on gtk.Assistant...
	* src/ManagedWindow.py  : allow a gtk.Window to be a ManagedWindow itself
	* src/ViewManager.py    : temporarily hook calling new export assistant
	* src/Makefile.am       : Add ExportAssistant.py
	* po/POTFILES.in        : Add ExportAssistant.py
